Import ncp3-gate 33bdd8baed99 re #3539 rb534 NULL pointer panic in zfs:dbuf_sync_list    zfs-dbuf-sync-panic.patch

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-6) nexenta; urgency=low
+
+  * Issue 3539: NULL pointer panic in zfs:dbuf_sync_list
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 04 Mar 2011 11:13:45 -0500
+
 sunwzfskr (5.11.134-31-0-5) nexenta; urgency=high
 
   * Issue 4019: aclinherit=restricted does not "trim" ACEs quite right
