--- a/debian/packages/sunwfmd/debian/changelog
+++ b/debian/packages/sunwfmd/debian/changelog
@@ -1,3 +1,9 @@
+sunwfmd (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Bug #2387: snmp traps not working, porting issue
+
+ -- Kartik Mistry <kartik.mistry@nexenta.com>  Fri, 11 Mar 2011 14:13:49 +0530
+
 sunwfmd (5.11.134-31-0-0) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
