--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbsu (5.11.134-31-0-11) nexenta; urgency=high
+
+  * Issue 4542: domain controller "hot fail over" can take forever
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 24 Mar 2011 23:31:20 -0500
+
 sunwsmbsu (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
