--- a/debian/packages/sunwarcmsr/debian/changelog
+++ b/debian/packages/sunwarcmsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwarcmsr (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 2596: arcmsr recursive mutex panic
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 25 Mar 2011 11:16:42 -0700
+
 sunwarcmsr (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
