--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsr (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 2243: default nsswitch.conf for LDAP is not appropriate for clusters
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 31 Mar 2011 13:38:25 -0400
+
 sunwcsr (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
