--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 2952: ZFS send w/dedup (-D) generates corrupted stream 
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 08 Apr 2011 14:37:49 -0700
+
 sunwzfskr (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
