--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-0-12) nexenta; urgency=low
+
+  * Isssue 3860: NULL pointer derefence panic in SATA module
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 12 Apr 2011 20:51:36 -0700
+
 sunwckr (5.11.134-31-0-11) nexenta; urgency=low
 
   * Issue 4578: squeue_synch_{enter,exit}() are unaware of squeue switching 
