--- a/debian/packages/sunwiscsir/debian/changelog
+++ b/debian/packages/sunwiscsir/debian/changelog
@@ -1,3 +1,9 @@
+sunwiscsir (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 4469: Spontaneous reboot at Stanford
+
+ -- Nexenta Systems <support@nexenta.com> mon, Apr 18 2011 15:44:59 -0400
+
 sunwiscsir (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
