Import ncp3-gate 85d7194dda4e re #4469 rb781 Spontaneous reboot at Stanford (fix Debian)

--- a/debian/packages/sunwiscsir/debian/changelog
+++ b/debian/packages/sunwiscsir/debian/changelog
@@ -2,7 +2,7 @@ sunwiscsir (5.11.134-31-0-11) nexenta; urgency=low
 
   * Issue 4469: Spontaneous reboot at Stanford
 
- -- Nexenta Systems <support@nexenta.com> mon, Apr 18 2011 15:44:59 -0400
+ -- Gate Keeper <admin@myhost>  Tue, 19 Apr 2011 06:48:56 -0700
 
 sunwiscsir (5.11.134-31-0-10) nexenta; urgency=low
 
