Import ncp3-gate ae75bba089a5 re #4101 rb801 Crash Dump Analyzer Output Review - Results when Auto-CDP/Auto-Sync Services interact    bkport-d7c3dd093864-sv-null.patch

--- a/debian/packages/sunwspsvu/debian/changelog
+++ b/debian/packages/sunwspsvu/debian/changelog
@@ -1,3 +1,9 @@
+sunwspsvu (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 4101: Crash Dump Analyzer Output Review - Results when Auto-CDP/Auto-Sync Services interact
+
+ -- Gate Keeper <support@nexenta.com>  Wed, 20 Apr 2011 17:31:44 -0700
+
 sunwspsvu (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
