--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmptsas (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 4898: Need LSI 9205 8e support (2808)
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 21 Apr 2011 19:54:33 -0700
+
 sunwmptsas (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
