--- a/debian/packages/sunwfmd/debian/changelog
+++ b/debian/packages/sunwfmd/debian/changelog
@@ -1,3 +1,9 @@
+sunwfmd (5.11.134-31-0-11) nexenta; urgency=low
+
+  * Issue 3205: Need to remove references to www.sun.com in diagnostics
+
+ -- Gate Keeper <support@nexenta.com>  Fri, 22 Apr 2011 19:19:52 -0700
+
 sunwfmd (5.11.134-31-0-10) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
