Import ncp3-gate 6ac2f91c1022 re #4949 rb822 disable the zfs vdev_cache by default    zfs-no-vdev-cache.patch

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-12) nexenta; urgency=low
+
+  * Issue 4949: disable the zfs vdev_cache by default
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 25 Apr 2011 20:31:39 -0700
+
 sunwzfskr (5.11.134-31-0-11) nexenta; urgency=low
 
   * Issue 2952: ZFS send w/dedup (-D) generates corrupted stream 
