Import ncp3-gate 1be6b2ea9bee re #5332 rb928 can't import pools with more than 13 disks    bkport-caf415d9aa53-zpool-import.patch # User George Wilson <George.Wilson@Sun.COM> # Date 1280532110 25200 6973547 zpool import succeeds but prints error message

--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-0-100a) nexenta; urgency=low
+
+  * Issue 5332: can't import pools with more than 13 disks
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 01 Jun 2011 21:33:49 -0700
+
 sunwzfsr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
