Import ncp3-gate 60e9ac7b34a2 re #5389 rb929 possible pool corruption with SLOG    bkport-161b964a0e10-zil-corruption.patch 883 ZIL reuse during remount can lead to data corruption

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-100a) nexenta; urgency=low
+
+  * Issue 5389: possible pool corruption with SLOG
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 01 Jun 2011 23:03:17 -0700
+
 sunwzfskr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
