--- a/debian/packages/sunwonzfs/debian/changelog
+++ b/debian/packages/sunwonzfs/debian/changelog
@@ -1,3 +1,9 @@
+sunwonzfs (5.11.134-31-0-100a) nexenta; urgency=low
+
+  * Issue 5389: possible pool corruption with SLOG
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 01 Jun 2011 23:03:45 -0700
+
 sunwonzfs (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
