--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,5 +1,6 @@
-sunwstmf (5.11.134-31-0-100) nexenta; urgency=low
+sunwstmf (5.11.134-31-0-101) nexenta; urgency=low
 
+  * Issue 4911: WRITE_SAME support for COMSTAR
   * Renumber packages in preparation for 3.1 release
 
  -- Gate Keeper <support@nexenta.com>  Mon, 02 May 2011 12:08:55 -0700
