--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,10 @@
+sunwcsu (5.11.134-31-0-101) nexenta; urgency=high
+
+  * Issue 5213: After you run "setup network service nfs-server restart"
+    command, CIFS shares becomes exported as NFS shares
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 22 Jun 2011 20:09:14 -0400
+
 sunwcsu (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
