--- a/debian/packages/sunwnfsckr/debian/changelog
+++ b/debian/packages/sunwnfsckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwnfsckr (5.11.134-31-0-101) nexenta; urgency=low
+
+  * Issue 5592: nfs max transfer sizes are not tunable
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 27 Jun 2011 16:04:19 -0700
+
 sunwnfsckr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
