--- a/debian/packages/sunwiscsidmr/debian/changelog
+++ b/debian/packages/sunwiscsidmr/debian/changelog
@@ -1,3 +1,9 @@
+sunwiscsidmr (5.11.134-31-0-101) nexenta; urgency=low
+
+  * Issue 5439: iSCSI drop outs
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 29 Jun 2011 18:08:32 -0400
+
 sunwiscsidmr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
