--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-101) nexenta; urgency=low
+
+  * Issue 5439: iSCSI drop outs
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 29 Jun 2011 18:08:32 -0400
+
 sunwzfskr (5.11.134-31-0-100a) nexenta; urgency=low
 
   * Issue 5389: possible pool corruption with SLOG
