--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,6 +1,23 @@
+sunwstmf (5.11.134-31-0-103) nexenta; urgency=low
+
+  * Issue 5368: Block-copy support for COMSTAR
+
+ -- Gate Keeper <support@nexenta.com>  Fri, 08 Jul 2011 12:08:55 -0700
+
+sunwstmf (5.11.134-31-0-102) nexenta; urgency=low
+
+  * Issue 5596: ATS support for COMSTAR
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 02 Jul 2011 12:08:55 -0700
+
 sunwstmf (5.11.134-31-0-101) nexenta; urgency=low
 
   * Issue 4911: WRITE_SAME support for COMSTAR
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 02 May 2011 12:08:55 -0700
+
+sunwstmf (5.11.134-31-0-100) nexenta; urgency=low
+
   * Renumber packages in preparation for 3.1 release
 
  -- Gate Keeper <support@nexenta.com>  Mon, 02 May 2011 12:08:55 -0700
