--- a/debian/packages/sunwemlxs/debian/changelog
+++ b/debian/packages/sunwemlxs/debian/changelog
@@ -1,3 +1,10 @@
+sunwemlxs (5.11.134-31-1-0) nexenta; urgency=low
+
+  * Issue 5891: Updated oce driver from Emulex
+  * Issue 5944: Updated emlxs driver from Emulex
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 01 Aug 2011 18:50:03 -0700
+
 sunwemlxs (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
