Import ncp3-gate e92736d0cc74 re #5827 authentication type is not supported (when joining a domain) re #5431 Lose access to the shares, smbrdr_exchange failed    smbcl-iod-b7f7250e66fe.patch 6944209 Let smbiod run as a service 6948083 Better logging of bad SMB signatures    smbcl-open-6dca3e19cdd6.patch 1282 nsmb_open has a race    smbcl-pipes-96340372b72d.patch 1120 Use real file descriptors for smbfs named pipes.    smbcl-tcon-12cf927830ab.patch 6955216 Negotiate Protocol fails with latest NetApp server 6962072 Tree connect may fail if addr-to-name lookup fails 6962091 Log messages like: ... smb_maperr32: no direct map for... 6962125 Tree connect failed with latest Isilon server 6972321 improve some error messages    smbsrv-eso-c1f01cd09a07.patch 1121 smbsrv should use SPNEGO (outbound authentication)

--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbskr (5.11.134-31-2-0) nexenta; urgency=low
+
+  * Issue 5827: authentication type is not supported (when joining a domain)
+
+ -- Gate Keeper <support@nexenta.com>  Thu, 11 Aug 2011 14:54:43 -0400
+
 sunwsmbskr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
