--- a/debian/packages/sunwixgbe/debian/changelog
+++ b/debian/packages/sunwixgbe/debian/changelog
@@ -1,3 +1,9 @@
+sunwixgbe (5.11.134-31-0-108) nexenta; urgency=low
+
+  * Issue 6242: update ixgbe from Joyent's Auguest 2011 drop
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 02 May 2011 12:08:55 -0700
+
 sunwixgbe (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
