--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-6590-0) nexenta; urgency=low
+
+  * Issue 6446: include dryrun for 'zfs send'
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 19 Sep 2011 20:07:15 +0400
+
 sunwzfskr (5.11.134-31-0-101) nexenta; urgency=low
 
   * Issue 5439: iSCSI drop outs
