--- a/debian/packages/sunwzfsu/debian/changelog
+++ b/debian/packages/sunwzfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsu (5.11.134-31-6590-0) nexenta; urgency=low
+
+  * Issue 6446: include dryrun for 'zfs send'
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 19 Sep 2011 20:23:20 -0400
+
 sunwzfsu (5.11.134-31-0-101) nexenta; urgency=low
 
   * Issue 5439: iSCSI drop outs
