--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-31-6424-1) nexenta; urgency=low
+
+  * Issue 6424: Removed Depends on sunwter, Recommends instead.
+
+ -- Kartik Mistry <kartik.mistry@nexenta.com>  Mon, 26 Sep 2011 07:41:25 -0700
+
 sunwcsu (5.11.134-31-6424-0) nexenta; urgency=low
 
   * Issue 5912: update terminfo database to include modern terminals
