--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbskr (5.11.134-31-6973-0) nexenta; urgency=low
+
+  * Issue 6809: OS X Lion (10.7) Finder access denied
+
+ -- Gate Keeper <support@nexenta.com>  Tue, 11 Oct 2011 16:41:44 -0400
+
 sunwsmbskr (5.11.134-31-2-0) nexenta; urgency=low
 
   * Issue 5827: authentication type is not supported (when joining a domain)
