Import ncp3-gate 2e40198d6074 closes #7090 mdb is broken, rb #1870 - backported to default branch, corrected version in changelog

--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-31-7090-1) nexenta; urgency=low
+
+  * Corrected version to include patch-id instead of bug-id.
+
+ -- Kartik Mistry <kartik.mistry@nexenta.com>  Tue, 01 Nov 2011 22:34:16 +0530
+
 sunwcsu (5.11.134-31-7001-1) nexenta; urgency=low
 
   * Issue 7001: Reverted sunwter from Recommends to Depends.
