--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,10 @@
+sunwzfskr (5.11.134-31-7622-0) nexenta; urgency=low
+
+  * Issue 6390: Crashes with Auto-sync and Direction reversal, or -R
+    creation-time argument
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 07 Oct 2011 23:12:16 -0400
+
 sunwzfskr (5.11.134-31-6590-0) nexenta; urgency=low
 
   * Issue 6446: include dryrun for 'zfs send'
