--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbsu (5.11.134-31-3-1) nexenta; urgency=low
+
+  * Issue 6613: join domain fails with INVALID_PARAMETER
+
+ -- Gate Keeper <support@nexenta.com>  Tue, 15 Nov 2011 12:50:57 -0400
+
 sunwsmbsu (5.11.134-31-3-0) nexenta; urgency=low
 
   * Issue 6231: should allow domain groups as member of local groups
