--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,10 @@
+sunwsmbskr (5.11.134-31-3-1) nexenta; urgency=low
+
+  * Issue 7258: Connections to CIFS service via DNS alias kills other sessions
+  * Issue 7225: Codenomicon findings in smbsrv
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 14 Nov 2011 16:24:17 -0400
+
 sunwsmbskr (5.11.134-31-3-0) nexenta; urgency=low
 
   * Issue 6809: OS X Lion (10.7) Finder access denied
