--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbfsu (5.11.134-31-7970-0) nexenta; urgency=high
+
+  * Issue 7377: OS 3.1.1 System Reboot from CIFS
+
+ -- Gate Keeper <support@nexenta.com>  Thu, 08 Dec 2011 11:15:28 -0500
+
 sunwsmbfsu (5.11.134-31-2-0) nexenta; urgency=low
 
   * Issue 5827: authentication type is not supported (when joining a domain)
