--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-7573-0) nexenta; urgency=medium
+
+  * Issue 5414: syseventd dumps core
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 30 Nov 2011 19:06:37 -0500
+
 sunwzfsr (5.11.134-31-6590-0) nexenta; urgency=low
 
   * Issue 6446: include dryrun for 'zfs send'
