--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,3 +1,9 @@
+sunwstmf (5.11.134-31-0-104) nexenta; urgency=low
+
+  * Issue 7916: COMSTAR issues CT requests at revision 2 - Should be revision 1
+
+ -- Gate Keeper <support@nexenta.com>  Thu, 19 Jan 2012 12:08:55 -0700
+
 sunwstmf (5.11.134-31-0-103) nexenta; urgency=low
 
   * Issue 5368: Block-copy support for COMSTAR
