--- a/debian/packages/sunwigb/debian/changelog
+++ b/debian/packages/sunwigb/debian/changelog
@@ -1,3 +1,9 @@
+sunwigb (5.11.134-31-8234-1) nexenta; urgency=low
+
+  * Issue 8115:  Support for I350 and ET2 into the "igb" driver
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 06 Feb 2012 12:08:55 -0700
+
 sunwigb (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
