--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-8430-0) nexenta; urgency=low
+
+  * Issue 7856: all SSD's have illegal request counter after reboot
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 15 Feb 2012 19:46:55 -0500
+
 sunwckr (5.11.134-31-2-100) nexenta; urgency=low
 
   * Issue 6667: acpica update from Intel via Joyent
