--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,3 +1,9 @@
+sunwstmf (5.11.134-31-0-105) nexenta; urgency=low
+
+  * Issue 6919: ATS not dropping locks upon completion
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 20 Feb 2012 12:08:55 -0700
+
 sunwstmf (5.11.134-31-0-104) nexenta; urgency=low
 
   * Issue 7916: COMSTAR issues CT requests at revision 2 - Should be revision 1
