Import ncp3-gate 725a6e02e04b closes #8544, rb2166 - backport 6231 to stable-3.1    mdb-illumos-1516.patch 1516 mdb dcmd to list kshare_t's under an smbsrv instance    mdb-illumos-1525.patch 1525 Need an easier way to see SIDs in cred_t    smbsrv-domgrp-6231.patch 1526 should allow domain groups as member of local groups

--- a/debian/packages/sunwmdb/debian/changelog
+++ b/debian/packages/sunwmdb/debian/changelog
@@ -1,3 +1,9 @@
+sunwmdb (5.11.134-31-8544-0) nexenta; urgency=low
+
+  * Issue 6231: should allow domain groups as member of local groups
+
+ -- Gate Keeper <support@nexenta.com>  Fri, 16 Sep 2011 16:57:00 -0400
+
 sunwmdb (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
