--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbsu (5.11.134-31-8544-0) nexenta; urgency=low
+
+  * Issue 6231: should allow domain groups as member of local groups
+
+ -- Gate Keeper <support@nexenta.com>  Fri, 16 Sep 2011 16:57:00 -0400
+
 sunwsmbsu (5.11.134-31-2-0) nexenta; urgency=low
 
   * Issue 5827: authentication type is not supported (when joining a domain)
