--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbfsu (5.11.134-31-8546-0) nexenta; urgency=high
+
+  * Issue 6613: join domain fails with INVALID_PARAMETER
+
+ -- Gate Keeper <support@nexenta.com>  Tue, 15 Nov 2011 12:50:57 -0500
+
 sunwsmbfsu (5.11.134-31-7970-0) nexenta; urgency=high
 
   * Issue 7377: OS 3.1.1 System Reboot from CIFS
