--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,10 @@
+sunwsmbfskr (5.11.134-31-8546-0) nexenta; urgency=high
+
+  * Issue 7225: Codenomicon findings in smbsrv
+  * Issue 7258: Connections to CIFS service via DNS alias kills other sessions
+
+ -- Gate Keeper <support@nexenta.com>  Mon, 14 Nov 2011 16:24:17 -0500
+
 sunwsmbskr (5.11.134-31-7623-0) nexenta; urgency=high
 
   * Issue 7427: Nexenta panics when CIFS access attempted from Windows XP with Simplified Chinese characterset
