Import ncp3-gate d2eee6aca841 closes #8936, rb2639 - backport 8621, 8922, 8923 to stable-3.1    mptsas-cmd-timeout-offline.patch    mptsas-cmd-timeout-reason.patch    zfs-vdev-latency.patch

--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-31-8936-0) nexenta; urgency=low
+
+  * Issue 8923: ZFS should track latency, use latency-aware hybrid allocator
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 21 Mar 2012 14:50:23 -0400
+
 sunwhea (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
