--- a/debian/packages/sunwonzfs/debian/changelog
+++ b/debian/packages/sunwonzfs/debian/changelog
@@ -1,3 +1,9 @@
+sunwonzfs (5.11.134-31-8936-0) nexenta; urgency=low
+
+  * Issue 8923: ZFS should track latency, use latency-aware hybrid allocator
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 11 May 2012 22:38:43 +0400
+
 sunwonzfs (5.11.134-31-0-100a) nexenta; urgency=low
 
   * Issue 5389: possible pool corruption with SLOG
