--- a/debian/packages/sunwcakr/debian/changelog
+++ b/debian/packages/sunwcakr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcakr (5.11.134-31-9966-0) nexenta; urgency=low
+
+  * Issue 9966: sysretq doesn't properly handle non-canonical addresses
+
+ -- Gate Keeper <support@nexenta.com>  Fri, 15 Jun 2012 18:32:17 -0700
+
 sunwcakr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
