--- a/debian/packages/sunwiscsitr/debian/changelog
+++ b/debian/packages/sunwiscsitr/debian/changelog
@@ -1,3 +1,9 @@
+sunwiscsitr (5.11.134-31-10219-0) nexenta; urgency=low
+
+  * re #9822: libiscsi test panics COMSTAR
+
+-- Nexenta Systems <steve.ma@nexenta.com>  Tue, 17 Jul 2012 12:15:23 -0500
+
 sunwiscsitr (5.11.134-31-0-101) nexenta; urgency=high
 
   * Issue 5439: iSCSI drop outs
