--- a/debian/packages/sunwarcmsr/debian/changelog
+++ b/debian/packages/sunwarcmsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwarcmsr (5.11.134-31-10444-0) nexenta; urgency=low
+
+  * Issues 8659: Areca-1880 is supported by 'arcmsr' driver, but OS does not attach the driver to the devic
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 25 Jul 2012 14:27:26 -0700
+
 sunwarcmsr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
