--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmptsas (5.11-134-31-11076-0) nexenta; urgency=high
+
+  * Issue 10443: 3.1.3 crash: BAD TRAP: type=e (#pf Page fault)
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 20 Aug 2012 16:35:00 -0400
+
 sunwmptsas (5.11.134-31-9636-0) nexenta; urgency=high
 
   * Issue 9636: mpt_sas should attempt an MUR reset at attach time.
