Import ncp3-gate 9892553f338c re #11215 rb3548 sesctl to SGI JBOD hangs in biowait() with a command stuck in mptsas driver    ses-pkt_time-11215.patch

--- a/debian/packages/sunwses/debian/changelog
+++ b/debian/packages/sunwses/debian/changelog
@@ -1,3 +1,9 @@
+sunwses (5.11.134-31-11215-0) nexenta; urgency=low
+
+  * Issue #11215 - sesctl to SGI JBOD hangs in biowait() with a command stuck in mptsas driver
+
+ -- Gate Keeper <support@nexenta.com>  Fri, 14 Sep 2012 09:45:00 -0700
+
 sunwses (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
