Import ncp3-gate db3db9b8ddc3 closes #10489 #11126 rb3501 openipmi driver ported from joyent

--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-31-11126-0) nexenta; urgency=low
+
+  * Issue 11126: OpenIPMI driver support added
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Aug 2012 12:51:30 -0700
+
 sunwcsu (5.11.134-31-9465-0) nexenta; urgency=low
 
   * Issue 8853: sharenfs property must accept more than 1024 bytes
