--- a/debian/packages/sunwcsl/debian/changelog
+++ b/debian/packages/sunwcsl/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsl (5.11.134-31-11126-0) nexenta; urgency=low
+
+  * Issue 11126: OpenIPMI driver support added
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Aug 2012 12:51:30 -0700
+
 sunwcsl (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
