--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-31-11339-0) nexenta; urgency=low
+
+  * Issue 11339: Enhancments for OpenIPMI driver
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 18 Sep 2012 12:32:07 -0700
+
 sunwhea (5.11.134-31-11126-0) nexenta; urgency=low
 
   * Issue 11126: updated libipmi and fma to use /dev/ipmi instead of /dev/bmc
