--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbfsu (5.11.134-31-11128-0) nexenta; urgency=severe
+
+  * Issue 11128: nsmb_close locking and teardown deadlock
+
+ -- Gate Keeper <support@nexenta.com> Fri, 14 Sep 2012 10:22:13 -0100
+
 sunwsmbfsu (5.11.134-31-8546-0) nexenta; urgency=high
 
   * Issue 6613: join domain fails with INVALID_PARAMETER
