--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmptsas (5.11.134-31-11657-0) nexenta; urgency=high
+
+  * Issue 11657: Add support for Supermicro onboard 2308 controller.
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 10 Oct 2012 16:35:00 -0400
+
 sunwmptsas (5.11.134-31-11076-0) nexenta; urgency=high
 
   * Issue 10443: 3.1.3 crash: BAD TRAP: type=e (#pf Page fault)
