--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,11 @@
+sunwsmbsu (5.11.134-31-10734-0) nexenta; urgency=high
+
+  * Issue 10734: NT Trans. Notify returning too quickly
+  * Issue 10733: Windows 7 directory listing keeps restarting
+  * Issue 6854:  FindFirstFile,FindFirstFileEx,... are not working correctly on Nexenta CIFS-shares
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 10 Oct 2012 17:26:00 -0700
+
 sunwsmbsu (5.11.134-31-8544-0) nexenta; urgency=low
 
   * Issue 6231: should allow domain groups as member of local groups
