--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-31-11339-1) nexenta; urgency=low
+
+  * Issue 7246: uuid.h is missing in 3.1.1
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 19 Oct 2012 17:05:10 +0400
+
 sunwhea (5.11.134-31-11339-0) nexenta; urgency=low
 
   * Issue 11339: Enhancments for OpenIPMI driver
