--- a/debian/packages/sunwcakr/debian/changelog
+++ b/debian/packages/sunwcakr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcakr (5.11.134-31-11828-0) nexenta; urgency=low
+
+  * Issue 6696: NexentaStor 3.1.1 installation CD panics on kvm
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 11 Oct 2012 19:32:17 -0500
+
 sunwcakr (5.11.134-31-9966-0) nexenta; urgency=low
 
   * Issue 9966: sysretq doesn't properly handle non-canonical addresses
