--- a/debian/packages/sunwcakrx/debian/changelog
+++ b/debian/packages/sunwcakrx/debian/changelog
@@ -1,3 +1,9 @@
+sunwcakrx (5.11.134-31-11828-0) nexenta; urgency=low
+
+  * Issue 6696: NexentaStor 3.1.1 installation CD panics on kvm
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 11 Oct 2012 19:32:17 -0500
+
 sunwcakrx (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
