--- a/debian/packages/sunwmrsas/debian/changelog
+++ b/debian/packages/sunwmrsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmrsas (5.11.134-31-11242-0) nexenta; urgency=low
+
+  * Issue #11242:  LSI 2208 and 3108 support for mr_sas
+
+ -- Gate Keeper <support@nexenta.com>  Wed, 22 Aug 2012 12:08:55 -0700
+
 sunwmrsas (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
