--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-11965-0) nexenta; urgency=low
+
+  * Issue 11843: NFSv3/UDP server sends packets with wrong Source IP in header
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 02 Nov 2012 14:45:39 +0400
+
 sunwckr (5.11.134-31-10491-0) nexenta; urgency=low
 
   * Issue 10453: kidmap_cache_lookup_xxx: replace mutex with rwlock
