Import ncp3-gate 084e8e29991a re #11944 rb3747 need workaround for QEMU bug that induces bad e1000g checksums    e1000g-qemu-workaround.patch

--- a/debian/packages/sunwintgige/debian/changelog
+++ b/debian/packages/sunwintgige/debian/changelog
@@ -1,3 +1,9 @@
+sunwintgige (5.11.134-31-11944-0) nexenta; urgency=low
+
+  * Issue 11944: need workaround for QEMU bug that induces bad e1000g checksums
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 01 Nov 2012 21:55:45 +0100
+
 sunwintgige (5.11.134-31-6710-0) nexenta; urgency=low
 
   * Issue 6679: Need 82579 PHY support in e1000g
