--- a/debian/packages/sunwcslr/debian/changelog
+++ b/debian/packages/sunwcslr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcslr (5.11.134-31-9241-0) nexenta; urgency=low
+
+  * Issue 9241: backport the fix for memory leak in libsocket
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 24 Oct 2012 20:13:19 +0400
+
 sunwcslr (5.11.134-31-7697-0) nexenta; urgency=low
 
   * Fixed core dumped mountd (bug #7563)
