Import ncp3-gate 7962b10cf911 re #11462 rb3866 Memory fragmentation seen in hung appliance with threads in vmem_alloc / vmem_xalloc with plenty of free memory    bkport-e7836650181b-zfs-memfrag.patch 1618 zfs causing system to hang in vmem_xalloc()

--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,8 +1,14 @@
+sunwckr (5.11.134-31-12262-0) nexenta; urgency=low
+
+  * Issue 11462: Backport Illumos 1618
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 02 Nov 2012 14:45:39 +0400
+
 sunwckr (5.11.134-31-11965-0) nexenta; urgency=low
 
   * Issue 11843: NFSv3/UDP server sends packets with wrong Source IP in header
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 02 Nov 2012 14:45:39 +0400
+ -- Nexenta Systems <support@nexenta.com>  Wed, 10 Oct 2012 16:43:02 +0400
 
 sunwckr (5.11.134-31-10491-0) nexenta; urgency=low
 
