--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-12236-0) nexenta; urgency=low
+
+  * Issue 12235: ZFS extensions for intelligent placement of data and metadata
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 28 Nov 2012 20:54:09 +0400
+
 sunwzfsr (5.11.134-31-9465-0) nexenta; urgency=low
 
   * Issue 8853: sharenfs property must accept more than 1024 bytes
