Import ncp3-gate a9f6511061d3 re #8622 rb3912 SSD added to a zpool does not appear to be recognised with a 4KB native block size    bkport-008d9e6b6072-zfs-DKIOCGMEDIAINFOEXT.patch # User bo zhou - Sun Microsystems - Beijing China <Bo.Zhou@Sun.COM> # Date 1271905961 -28800 6927876 For 4k sector support, ZFS needs to use DKIOCGMEDIAINFOEXT    bkport-2bd022a765e2-override-physical-blocksize.patch # User George Wilson <gwilson@delphix.com> # Date 1336049359 25200 2665 sd.conf should be able to override physical-block-size 2671 zpool import should not fail if vdev ashift has increased    bkport-a4721c685d96-grub-large-sectors.patch # User Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> # Date 1312841427 25200 1303 Grub should support large sector disks

--- a/debian/packages/sunwos86r/debian/changelog
+++ b/debian/packages/sunwos86r/debian/changelog
@@ -1,3 +1,9 @@
+sunwos86r (5.11.134-31-9674-8622) nexenta; urgency=low
+
+  * Issue 8622: SSD added to a zpool does not appear to be recognised with a 4KB native block size
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 05 Dec 2012 22:36:21 +0100
+
 sunwos86r (5.11.134-31-9673-0) nexenta; urgency=low
 
   * Issue 8825: unsupported disks in MD1200 JBOD
