--- a/debian/packages/sunwgrub/debian/changelog
+++ b/debian/packages/sunwgrub/debian/changelog
@@ -1,3 +1,9 @@
+sunwgrub (5.11.134-31-1-8622) nexenta; urgency=low
+
+  * Issue 8622: SSD added to a zpool does not appear to be recognised with a 4KB native block size
+
+ -- Gate Keeper <support@nexenta.com>  Wed, 05 Dec 2012 22:36:21 +0100
+
 sunwgrub (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
