--- a/debian/packages/sunwzfsu/debian/changelog
+++ b/debian/packages/sunwzfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsu (5.11.134-31-12264-8622) nexenta; urgency=low
+
+  * Issue 8622: SSD added to a zpool does not appear to be recognised with a 4KB native block size
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 05 Dec 2012 22:36:21 +0100
+
 sunwzfsu (5.11.134-31-12263-12236) nexenta; urgency=low
 
   * Issue 12235: ZFS extensions for intelligent placement of data and metadata
