--- a/debian/packages/sunwfmd/debian/changelog
+++ b/debian/packages/sunwfmd/debian/changelog
@@ -1,3 +1,10 @@
+sunwfmd (5.11.134-31-11340-11612) nexenta; urgency=high
+
+  * Issue 11612: Failing vdev of a mirrored pool should not take zfs
+    operations out of action for extended periods of time.
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 04 Dec 2012 10:00:00 -0400
+
 sunwfmd (5.11.134-31-11339-0) nexenta; urgency=low
 
   * Issue 11339: Enhancments for OpenIPMI driver
