Import ncp3-gate 1277203da311 re #12464 rb3943 Spurious errors setting up new sessions re #12394 rb3943 Even NULL sessions should use SPNEGO    bkport-1509bbd3baf5-nx12464.patch # User Gordon Ross <gwr@nexenta.com> # Date 1355714085 18000 re #12464 rb3960 Spurious errors setting up new sessions    bkport-765ae7b11057-nx12394.patch # User Gordon Ross <gwr@nexenta.com> # Date 1355258655 18000 re #12394 rb3934 Even NULL sessions should use SPNEGO

--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,10 @@
+sunwsmbfsu (5.11.134-31-12464-0) nexenta; urgency=high
+
+  * Issue 12464: Spurious errors setting up new sessions
+  * Issue 12394: Even NULL sessions should use SPNEGO
+
+ -- Gate Keeper <support@nexenta.com> Fri, 14 Dec 2012 19:35:29 -0500
+
 sunwsmbfsu (5.11.134-31-11128-0) nexenta; urgency=severe
 
   * Issue 11128: nsmb_close locking and teardown deadlock
